{
    "name": "MyPlayerInput",
    "maps": [
        {
            "name": "PlayerMain",
            "id": "46eaf2df-d337-4b45-b729-356ec850de6f",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "4bf7b5eb-0d11-4a88-a883-40127055eba6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "809ca690-8c81-4649-9961-843f524da58a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Skill1",
                    "type": "Button",
                    "id": "a52c374e-9e35-46bd-9ebc-ce775b82ddd4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Skill2",
                    "type": "Button",
                    "id": "62c19480-0800-4c5e-86c8-bcc60dad9112",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a86dabdc-fc96-4e43-b099-f453cd38b41c",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f70dcd6f-5baf-40db-b0ef-cc25d1ecd3a9",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "97dd07c0-fe3e-454f-a38f-851ff9eda508",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skill1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a070d2f4-d381-4c35-975e-2152406bb4eb",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skill2",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}